--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="magic.css">
+
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1 class="center">jahrei.</h1>
 </body>
+
+
 </html>
