--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 
 <body>
-    <h1 class="center">jahrei.</h1>
+    <div class="grad-bg">
+        <h1 class="center">jahrei.</h1>
+    </div>
 </body>
 
 
