Update several errors
More testing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
 
 <body>
-    <div class="grad-bg">
-        <h1 class="center">jahrei.</h1>
+    <div class="bg-grad">
+    </div>
+    <div class="text"> 
+        <h1>jahrei.</h1>
     </div>
 </body>
 
