--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="magic.css" />
+<link rel="stylesheet" type="text/css" href="magic.css" />
+<head>
 
+</head>
 
-<body>
-    <div class="bg-grad">
-    </div>
-    <div class="text"> 
-        <h1>jahrei.</h1>
+<body class="bg-grad">
+    <div class="t_center"> 
+        <h1 class="trident"> 
+                                                       ,--,.,.+`
+                                             /`      /+'````
+ ,\                                       //%/     }/(_____
+<(#>>=====================================<<<####<( <+----_>>====--
+ `/                                       \\%      }\(^^^^`
+                                            \,      \+,____ 
+                                                      `=='"'"+,
+        </h1>
+    <div>
+
+    <div class="j_center">
+        <h2 class="jahrei">
+            jahrei.
+        </h2>
     </div>
 </body>
 
