Add links directory
Also added pre flag to ascii art

--- a/links/index.html
+++ b/links/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="magic.css" />
+<link rel="stylesheet" type="text/css" href="magic_links.css" />
 <head>
 
 </head>
@@ -20,7 +20,7 @@
 
     <div class="j_center">
         <h2 class="jahrei">
-            jahrei.
+            this should be links directory
         </h2>
     </div>
 </body>
