--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="magic.css" />
-<head>
-
-</head>
 
 <body class="bg-grad">
-    <div class="t_center"> 
-        <h1 class="trident" markdown="1"> <!--Not sure if markdown flag works on mobile.-->
-                                                       ,--,.,.+`
-                                             /`      /+'````
- ,\                                       //%/     }/(_____
-<(#>>=====================================<<<####<( <+----_>>====--
- `/                                       \\%      }\(^^^^`
-                                            \,      \+,____ 
-                                                      `=='"'"+,
+
+    <!--trident ASCII art-->
+    <div class="tridentCenter"> 
+        <h1 class="trident" markdown="1">
+                                                                ,--,.,.+`
+                                                        /`      /+'````
+            ,\                                       //%/     }/(_____
+            <(#>>=====================================<<<####<( <+----_>>====--
+            `/                                       \\%      }\(^^^^`
+                                                        \,      \+,____ 
+                                                                `=='"'"+,
         </h1>
     <div>
 
-    <div class="j_center">
+    <!--"jahrei." text-->
+    <div class="jahreiPosition">
         <h2 class="jahrei">
             jahrei.
         </h2>
     </div>
+
+    <!--"links" link-->
+
+    <div class="linksPosition">
+        <h2 class="links">
+            <a href="links/index.html">links.</a>
+        </h2>
+    </div>
+
 </body>
 
 
