--- a/links/index.html
+++ b/links/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="magic_links.css" />
+
+<!-- index for links page -->
+
 <head>
 
 </head>
@@ -16,14 +19,14 @@
                                             \,      \+,____ 
                                                       `=='"'"+,
         </h1>
+        <div class="j_center">
+            <h1 class="jahrei">
+links
+            </h1>
+        </div>
     <div>
-
-    <div class="j_center">
-        <h2 class="jahrei">
-            this should be links directory
-        </h2>
-    </div>
 </body>
+
 
 
 </html>
