--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="linksPosition">
         <h2 class="links">
-            <a href="links/index.html">links.</a>
+            <a href="links/">links.</a>
         </h2>
     </div>
 
