--- a/links/index.html
+++ b/links/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="magic_links.css" />
-
-<!-- index for links page -->
-
-<head>
-
-</head>
+<link rel="stylesheet" type="text/css" href="magic.css" />
+<head> <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
 
 <body class="bg-grad">
-    <div class="t_center"> 
-        <h1 class="trident" markdown="1"> <!--Not sure if markdown flag works on mobile.-->
-                                                       ,--,.,.+`
-                                             /`      /+'````
- ,\                                       //%/     }/(_____
-<(#>>=====================================<<<####<( <+----_>>====--
- `/                                       \\%      }\(^^^^`
-                                            \,      \+,____ 
-                                                      `=='"'"+,
-        </h1>
-        <div class="j_center">
-            <h1 class="jahrei">
-links
-            </h1>
-        </div>
-    <div>
-</body>
 
+    <div class="jahrei-text">
+        <h1 class="text">jahrei ⚡</h1>
+    </div>      
+
+    <a href="https://github.com/jahrei" target="_blank" rel="noopener noreferrer" class="gradient-button fadeInDown">
+        <img src="github.png" alt="Icon" class="button-icon">
+        <span class="button-text">github.</span>
+      </a>
+
+    <a href="https://instagram.com/jahreikun" target="_blank" rel="noopener noreferrer" class="gradient-button">
+    <img src="insta.png" alt="Icon" class="button-icon">
+    <span class="button-text">instagram.</span>
+    </a>
+
+    <a href="https://tiktok.com/@jahreikun" target="_blank" rel="noopener noreferrer" class="gradient-button">
+        <img src="tiktok.png" alt="Icon" class="button-icon">
+        <span class="button-text">tiktok.</span>
+    </a>
+
+
+
+</body>
 
 
 </html>
