--- a/links/index.html
+++ b/links/index.html
@@ -15,7 +15,7 @@
     </div>      
 
     <div class="holding-box">
-        <a href="#" target="_blank" rel="noopener noreferrer" class="gradient-button-mcxxvi">
+        <a href="#" class="gradient-button-mcxxvi">
             <img src="mcxxvi.png" alt="Icon" class="button-icon">
             <span class="button-text-mcxxvi">mcxxvi.</span>
             <span class="hide">under construction!</span>
