--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body class="bg-grad">
 
-    <!--trident ASCII art-->
+    <!-- trident ASCII art
     <div class="tridentCenter"> 
         <h1 class="trident" markdown="1">
                                                                 ,--,.,.+`
@@ -15,22 +15,20 @@
                                                         \,      \+,____ 
                                                                 `=='"'"+,
         </h1>
-    <div>
+    <div> -->
 
     <!--"jahrei." text-->
     <div class="jahreiPosition">
-        <h2 class="jahrei">
-            jahrei.
-        </h2>
+        <div class="jahrei">jahrei.</div>
     </div>
 
-    <!--"links" link-->
+    <!-- "links" link
 
     <div class="linksPosition">
         <h2 class="links">
             <a href="links/">links.</a>
         </h2>
-    </div>
+    </div> -->
 
 </body>
 
