--- a/index.html
+++ b/index.html
@@ -1,36 +1,124 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" type="text/css" href="magic.css" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jahrei Labs - Engineering & Creative Solutions</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html">jahrei labs</a>
+            </div>
+            <div class="nav-links">
+                <a href="hardware.html">Hardware</a>
+                <a href="software.html">Software</a>
+                <a href="embedded.html">Embedded</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </header>
 
-<body class="bg-grad">
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1 class="fade-in">jahrei labs</h1>
+                <h2 class="fade-in delay-1">engineering & creative solutions for the modern world</h2>
+                <p class="fade-in delay-2">A personal studio focused on bridging the gap between hardware, software, and creative design.</p>
+                <div class="cta-buttons fade-in delay-3">
+                    <a href="hardware.html" class="btn">Explore Hardware</a>
+                    <a href="software.html" class="btn">Explore Software</a>
+                    <a href="embedded.html" class="btn">Explore Embedded</a>
+                    <a href="#projects" class="btn btn-outline">View All Projects</a>
+                </div>
+            </div>
+        </section>
 
-    <!-- trident ASCII art
-    <div class="tridentCenter"> 
-        <h1 class="trident" markdown="1">
-                                                                ,--,.,.+`
-                                                        /`      /+'````
-            ,\                                       //%/     }/(_____
-            <(#>>=====================================<<<####<( <+----_>>====--
-            `/                                       \\%      }\(^^^^`
-                                                        \,      \+,____ 
-                                                                `=='"'"+,
-        </h1>
-    <div> -->
+        <section id="about" class="about">
+            <div class="container">
+                <h2 class="section-title">About</h2>
+                <div class="about-content">
+                    <div class="mission">
+                        <h3>Mission</h3>
+                        <p>Bridging creativity, hardware, and software to create innovative solutions for everyday problems.</p>
+                    </div>
+                    <div class="about-description">
+                        <p>Jahrei Labs is a solo studio, currently run by an electrical engineering student working across web, embedded, AI, automation, and design. The studio serves as a platform to showcase personal and professional projects spanning various domains of technology.</p>
+                    </div>
+                    <div class="current-work">
+                        <h3>Current Work</h3>
+                        <div class="work-items">
+                            <div class="work-item">
+                                <h4>Liftgear V2</h4>
+                                <p>Shopify redevelopment with focus on UI/UX and frontend logic optimization.</p>
+                            </div>
+                            <div class="work-item">
+                                <h4>Certfid</h4>
+                                <p>NFC certificate verification system with mobile-first UI design.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!--"jahrei." text-->
-    <div class="jahreiPosition">
-        <div class="jahrei">jahrei.</div>
-    </div>
+        <section id="projects" class="projects-preview">
+            <div class="container">
+                <h2 class="section-title">Featured Projects</h2>
+                <div class="project-categories">
+                    <div class="category-card fade-in">
+                        <h3>Hardware</h3>
+                        <p>Custom controllers, mechanical keyboard mods, vintage PC builds, and more.</p>
+                        <a href="hardware.html" class="btn btn-small">View Projects</a>
+                    </div>
+                    <div class="category-card fade-in delay-1">
+                        <h3>Software</h3>
+                        <p>Productivity tools, automation systems, UI kits, and web development projects.</p>
+                        <a href="software.html" class="btn btn-small">View Projects</a>
+                    </div>
+                    <div class="category-card fade-in delay-2">
+                        <h3>Embedded</h3>
+                        <p>NFC systems, Arduino controllers, FPGA labs, and sensor interfacing projects.</p>
+                        <a href="embedded.html" class="btn btn-small">View Projects</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- "links" link
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2 class="section-title">Contact</h2>
+                <div class="contact-content">
+                    <p>Interested in collaborating or have questions about my work?</p>
+                    <a href="mailto:contact@jahreilabs.com" class="email-link">contact@jahreilabs.com</a>
+                    <div class="social-links">
+                        <a href="https://github.com/jahrei" target="_blank" rel="noopener noreferrer">GitHub</a>
+                        <a href="https://linkedin.com/in/jahrei" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                        <a href="https://instagram.com/jahrei.labs" target="_blank" rel="noopener noreferrer">Instagram</a>
+                    </div>
+                    <p class="coming-soon">Blog and newsletter coming soon</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <div class="linksPosition">
-        <h2 class="links">
-            <a href="links/">links.</a>
-        </h2>
-    </div> -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Jahrei Labs. All rights reserved.</p>
+        </div>
+    </footer>
 
+    <script src="script.js"></script>
 </body>
-
-
 </html>
