--- a/software.html
+++ b/software.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software Projects - Jahrei Labs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about-overlay.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -438,6 +439,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="about-overlay.js"></script>
+    <script src="matrix-animation.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Project details toggle
