just push part 2

--- a/software.html
+++ b/software.html
@@ -292,7 +292,7 @@
     <script src="script.js"></script>
     <script src="about-overlay.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="circuit-animation.js"></script>
+    <script src="matrix-animation.js"></script>
     <script src="js/project-gallery.js"></script>
     <script src="js/project-loader.js"></script>
 </body>
