feat: various updates to project entries & about page

--- a/embedded.html
+++ b/embedded.html
@@ -184,7 +184,7 @@
                 <a href="hardware.html">Hardware</a>
                 <a href="software.html">Software</a>
                 <a href="embedded.html" class="active">Embedded</a>
-                <a href="index.html#about">About</a>
+                <a href="#about">About</a>
                 <a href="index.html#contact">Contact</a>
             </div>
             <div class="menu-toggle">
@@ -227,5 +227,6 @@
     <script src="circuit-animation.js"></script>
     <script src="js/project-gallery.js"></script>
     <script src="js/project-loader.js"></script>
+    <script src="about-overlay.js"></script>
 </body>
 </html>
