--- a/hardware.html
+++ b/hardware.html
@@ -198,7 +198,7 @@
                 <a href="hardware.html" class="active">Hardware</a>
                 <a href="software.html">Software</a>
                 <a href="embedded.html">Embedded</a>
-                <a href="index.html#about">About</a>
+                <a href="#about">About</a>
                 <a href="index.html#contact">Contact</a>
             </div>
             <div class="menu-toggle">
@@ -231,7 +231,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Jahrei Labs. All rights reserved.</p>
+            <p>&copy; 2025 Jahrei Labs. All rights reserved.</p>
         </div>
     </footer>
 
@@ -241,5 +241,6 @@
     <script src="circuit-animation.js"></script>
     <script src="js/project-gallery.js"></script>
     <script src="js/project-loader.js"></script>
+    <script src="about-overlay.js"></script>
 </body>
 </html>
