--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2 class="section-title">Contact</h2>
                 <div class="contact-content">
                     <p>Interested in collaborating or have questions about my work?</p>
-                    <a href="mailto:contact@jahreilabs.com" class="email-link">contact@jahreilabs.com</a>
+                    <a href="mailto:contact@jahreilabs.com" class="email-link">email</a>
                     <div class="social-links">
                         <a href="https://github.com/jahrei" target="_blank" rel="noopener noreferrer">GitHub</a>
                         <a href="https://linkedin.com/in/jahrei" target="_blank" rel="noopener noreferrer">LinkedIn</a>
