--- a/software.html
+++ b/software.html
@@ -242,7 +242,7 @@
                 <a href="hardware.html">Hardware</a>
                 <a href="software.html" class="active">Software</a>
                 <a href="embedded.html">Embedded</a>
-                <a href="index.html#about">About</a>
+                <a href="#about">About</a>
                 <a href="index.html#contact">Contact</a>
             </div>
             <div class="menu-toggle">
@@ -295,5 +295,6 @@
     <script src="matrix-animation.js"></script>
     <script src="js/project-gallery.js"></script>
     <script src="js/project-loader.js"></script>
+    <script src="about-overlay.js"></script>
 </body>
 </html>
