feat: various updates to project entries

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <div class="project-categories">
                     <div class="category-card fade-in">
                         <h3>Hardware</h3>
-                        <p>Custom controllers, mechanical keyboard mods, vintage PC builds, and more.</p>
+                        <p>Custom builds, modifications, and hardware experiments exploring the physical side of technology.</p>
                         <a href="hardware.html" class="btn btn-small">View Projects</a>
                     </div>
                     <div class="category-card fade-in delay-1">
                         <h3>Software</h3>
-                        <p>Productivity tools, automation systems, UI kits, and web development projects.</p>
+                        <p>Productivity tools, automation systems, and web development projects.</p>
                         <a href="software.html" class="btn btn-small">View Projects</a>
                     </div>
                     <div class="category-card fade-in delay-2">
