--- a/software.html
+++ b/software.html
@@ -257,7 +257,7 @@
         <section class="page-header">
             <div class="container">
                 <h1>Software Projects</h1>
-                <p>Web applications, productivity tools, and automation systems designed to solve real-world problems.</p>
+                <p>Productivity tools, automation systems, and web development projects.</p>
             </div>
         </section>
 
