feat: various responsiveness changes

--- a/hardware.html
+++ b/hardware.html
@@ -17,6 +17,16 @@
             position: relative;
         }
         
+        /* Sticky navbar */
+        .navbar {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+        }
+        
         /* Additional styles specific to project pages */
         .page-header {
             background-color: rgba(245, 245, 245, 0.7);
@@ -231,7 +241,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Jahrei Labs. All rights reserved.</p>
+            <p>&copy; 2025 jahrei labs. All rights reserved.</p>
         </div>
     </footer>
 
