--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Jahrei Labs. All rights reserved.</p>
+            <p>&copy; 2025 jahrei labs. All rights reserved.</p>
         </div>
     </footer>
 
