--- a/software.html
+++ b/software.html
@@ -75,7 +75,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
             gap: 2rem;
-            margin-top: 1rem;
+            margin-top: 3rem;
         }
 
         .project-card {
@@ -205,6 +205,70 @@
             color: var(--dark-gray);
         }
 
+        /* Special glow effect for featured project */
+        .featured-project {
+            position: relative;
+            /* Start with no glow, will animate on load */
+            box-shadow: 0 5px 15px var(--shadow-color);
+            animation: 
+                loadGlow 2s ease-out 1s forwards,
+                pulseGlow 3s ease-in-out 3s infinite alternate;
+        }
+
+        .featured-project:hover {
+            transform: translateY(-15px);
+            animation-duration: 2s;
+        }
+
+        @keyframes loadGlow {
+            0% {
+                box-shadow: 0 5px 15px var(--shadow-color);
+            }
+            50% {
+                box-shadow: 
+                    0 5px 15px var(--shadow-color),
+                    0 0 0 4px rgba(147, 51, 234, 0.8),
+                    0 0 30px rgba(147, 51, 234, 0.6),
+                    0 0 60px rgba(147, 51, 234, 0.4);
+            }
+            100% {
+                box-shadow: 
+                    0 5px 15px var(--shadow-color),
+                    0 0 0 2px rgba(147, 51, 234, 0.5),
+                    0 0 20px rgba(147, 51, 234, 0.3),
+                    0 0 40px rgba(147, 51, 234, 0.2);
+            }
+        }
+
+        @keyframes pulseGlow {
+            0% {
+                box-shadow: 
+                    0 5px 15px var(--shadow-color),
+                    0 0 0 2px rgba(147, 51, 234, 0.5),
+                    0 0 20px rgba(147, 51, 234, 0.3),
+                    0 0 40px rgba(147, 51, 234, 0.2);
+            }
+            100% {
+                box-shadow: 
+                    0 8px 25px rgba(0, 0, 0, 0.15),
+                    0 0 0 3px rgba(168, 85, 247, 0.7),
+                    0 0 30px rgba(168, 85, 247, 0.5),
+                    0 0 60px rgba(147, 51, 234, 0.3);
+            }
+        }
+
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
         @media (max-width: 768px) {
             .projects-grid {
                 grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
@@ -229,6 +293,16 @@
                 width: 100%;
                 max-width: 200px;
             }
+        }
+
+        /* Sticky navbar */
+        .navbar {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
     </style>
 </head>
@@ -285,7 +359,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Jahrei Labs. All rights reserved.</p>
+            <p>&copy; 2025 jahrei labs. All rights reserved.</p>
         </div>
     </footer>
 
