--- a/embedded.html
+++ b/embedded.html
@@ -82,9 +82,24 @@
         .project-meta {
             display: flex;
             gap: 1rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
             color: var(--dark-gray);
             font-size: 0.9rem;
+        }
+
+        .project-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .project-tag {
+            background-color: var(--light-gray);
+            padding: 0.2rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            color: var(--dark-gray);
         }
 
         .project-status {
@@ -172,6 +187,16 @@
                 font-size: 2.5rem;
             }
         }
+
+        /* Sticky navbar */
+        .navbar {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+        }
     </style>
 </head>
 <body>
@@ -217,7 +242,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Jahrei Labs. All rights reserved.</p>
+            <p>&copy; 2025 jahrei labs. All rights reserved.</p>
         </div>
     </footer>
 
