--- a/software.html
+++ b/software.html
@@ -297,8 +297,10 @@
 
         /* Sticky navbar */
         .navbar {
-            position: sticky;
+            position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             z-index: 1000;
             background-color: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
