--- a/index.html
+++ b/index.html
@@ -3,97 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jahrei Labs - Engineering & Creative Solutions</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="about-overlay.css">
+    <title>jahrei labs - Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about-overlay.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="index.html">jahrei labs</a>
-            </div>
-            <div class="nav-links">
-                <a href="hardware.html">Hardware</a>
-                <a href="software.html">Software</a>
-                <a href="embedded.html">Embedded</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </div>
-            <div class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">jahrei labs</a>
+        </div>
+        <div class="nav-links">
+            <a href="pages/hardware.html">Hardware</a>
+            <a href="pages/software.html">Software</a>
+            <a href="pages/embedded.html">Embedded</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
 
-    <main>
-        <section class="hero">
-            <div class="container">
-                <h1 class="fade-in">jahrei labs</h1>
-                <h2 class="fade-in delay-1">engineering & creative solutions for the modern world</h2>
-                <p class="fade-in delay-2">A personal studio focused on bridging the gap between hardware, software, and creative design.</p>
-                <div class="cta-buttons fade-in delay-3">
-                    <a href="hardware.html" class="btn">Explore Hardware</a>
-                    <a href="software.html" class="btn">Explore Software</a>
-                    <a href="embedded.html" class="btn">Explore Embedded</a>
-                    <a href="#projects" class="btn btn-outline">View All Projects</a>
+    <section class="hero">
+        <div class="container">
+            <h1 class="fade-in">jahrei labs</h1>
+            <h2 class="fade-in delay-1">Engineering Tomorrow's Solutions</h2>
+            <p class="fade-in delay-2">Bridging hardware and software through innovative design and engineering excellence. From circuit boards to code, I craft solutions that push the boundaries of what's possible.</p>
+            <div class="cta-buttons fade-in delay-3">
+                <a href="pages/software.html" class="btn">View Software Projects</a>
+                <a href="pages/hardware.html" class="btn btn-outline">Explore Hardware</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <h2 class="section-title">Current Focus</h2>
+            <div class="about-content">
+                <div class="mission">
+                    <h3>Mission</h3>
+                    <p>I'm passionate about creating high-performance systems that blend elegant hardware design with efficient software solutions. Every project is an opportunity to push boundaries and solve complex problems.</p>
+                </div>
+                <div class="current-work">
+                    <h3>Active Projects</h3>
+                    <div class="work-items">
+                        <div class="work-item">
+                            <h4>E-commerce Platform Development</h4>
+                            <p>Full-stack Shopify redevelopment focusing on performance optimization and user experience enhancement.</p>
+                        </div>
+                        <div class="work-item">
+                            <h4>RFID Certification System</h4>
+                            <p>Building NFC/RFID verification infrastructure with real-time data processing and mobile-first design.</p>
+                        </div>
+                        <div class="work-item">
+                            <h4>Hardware Integration Projects</h4>
+                            <p>Custom PCB designs and embedded systems for IoT applications and industrial automation.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-
-        <section id="projects" class="projects-preview">
-            <div class="container">
-                <h2 class="section-title">Featured Projects</h2>
-                <div class="project-categories">
-                    <div class="category-card fade-in">
-                        <h3>Hardware</h3>
-                        <p>Custom builds, modifications, and hardware experiments exploring the physical side of technology.</p>
-                        <a href="hardware.html" class="btn btn-small">View Projects</a>
-                    </div>
-                    <div class="category-card fade-in delay-1">
-                        <h3>Software</h3>
-                        <p>Productivity tools, automation systems, and web development projects.</p>
-                        <a href="software.html" class="btn btn-small">View Projects</a>
-                    </div>
-                    <div class="category-card fade-in delay-2">
-                        <h3>Embedded</h3>
-                        <p>NFC systems, Arduino controllers, FPGA labs, and sensor interfacing projects.</p>
-                        <a href="embedded.html" class="btn btn-small">View Projects</a>
-                    </div>
-                </div>
+    <section class="projects">
+        <div class="container">
+            <h2 class="section-title">Project Categories</h2>
+            <div class="project-categories">
+                <a href="pages/software.html" class="category-card">
+                    <h3>Software</h3>
+                    <p>Web applications, automation tools, and productivity solutions built with modern technologies.</p>
+                    <div class="btn btn-small">Explore Software →</div>
+                </a>
+                <a href="pages/hardware.html" class="category-card">
+                    <h3>Hardware</h3>
+                    <p>Custom builds, modifications, and hardware experiments pushing the limits of performance.</p>
+                    <div class="btn btn-small">View Hardware →</div>
+                </a>
+                <a href="pages/embedded.html" class="category-card">
+                    <h3>Embedded</h3>
+                    <p>Microcontroller projects, FPGA designs, and IoT solutions bridging hardware and software.</p>
+                    <div class="btn btn-small">See Embedded →</div>
+                </a>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2 class="section-title">Contact</h2>
-                <div class="contact-content">
-                    <p>Interested in collaborating or have questions about my work?</p>
-                    <a href="mailto:contact@jahreilabs.com" class="email-link">email</a>
-                    <div class="social-links">
-                        <a href="https://github.com/jahrei" target="_blank" rel="noopener noreferrer">GitHub</a>
-                        <a href="https://linkedin.com/in/jahrei" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                        <a href="https://instagram.com/jahrei.labs" target="_blank" rel="noopener noreferrer">Instagram</a>
-                    </div>
-                    <p class="coming-soon">Blog and newsletter coming soon</p>
+    <section class="contact" id="contact">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-content">
+                <p>Interested in collaborating or have a project in mind? I'm always open to discussing new opportunities and challenges.</p>
+                <a href="mailto:contact@jahreilabs.com" class="email-link">contact@jahreilabs.com</a>
+                <div class="social-links">
+                    <a href="https://github.com/jahrei" target="_blank">GitHub</a>
+                    <a href="https://linkedin.com/in/jgrei" target="_blank">LinkedIn</a>
                 </div>
+                <p class="coming-soon">Portfolio expansion coming soon...</p>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 jahrei labs. All rights reserved.</p>
+            <p>&copy; 2025 jahrei labs. all rights reserved.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="about-overlay.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/about-overlay.js"></script>
 </body>
 </html>
