--- a/pages/embedded.html
+++ b/pages/embedded.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embedded Projects - Jahrei Labs</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="about-overlay.css">
-    <link rel="stylesheet" href="css/project-gallery.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/about-overlay.css">
+    <link rel="stylesheet" href="../css/project-gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -205,14 +205,14 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="index.html">jahrei labs</a>
+                <a href="../index.html">jahrei labs</a>
             </div>
             <div class="nav-links">
                 <a href="hardware.html">Hardware</a>
                 <a href="software.html">Software</a>
                 <a href="embedded.html" class="active">Embedded</a>
                 <a href="#about">About</a>
-                <a href="index.html#contact">Contact</a>
+                <a href="../index.html#contact">Contact</a>
             </div>
             <div class="menu-toggle">
                 <span></span>
@@ -248,12 +248,11 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="about-overlay.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/about-overlay.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="circuit-animation.js"></script>
-    <script src="js/project-gallery.js"></script>
-    <script src="js/project-loader.js"></script>
-    <script src="about-overlay.js"></script>
+    <script src="../js/animations/circuit-animation.js"></script>
+    <script src="../js/project-gallery.js"></script>
+    <script src="../js/project-loader.js"></script>
 </body>
 </html>
