🔗 Implement clean URLs and revert homepage text - Move pages to directories with index.html, remove .html extensions, restore original branding

--- a/embedded/index.html
+++ b/embedded/index.html
@@ -208,9 +208,9 @@
                 <a href="../index.html">jahrei labs</a>
             </div>
             <div class="nav-links">
-                <a href="hardware.html">Hardware</a>
-                <a href="software.html">Software</a>
-                <a href="embedded.html" class="active">Embedded</a>
+                <a href="../hardware/">Hardware</a>
+                <a href="../software/">Software</a>
+                <a href="../embedded/" class="active">Embedded</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
