--- a/hardware/index.html
+++ b/hardware/index.html
@@ -207,9 +207,9 @@
                 <a href="../index.html">jahrei labs</a>
             </div>
             <div class="nav-links">
-                <a href="hardware.html" class="active">Hardware</a>
-                <a href="software.html">Software</a>
-                <a href="embedded.html">Embedded</a>
+                <a href="../hardware/" class="active">Hardware</a>
+                <a href="../software/">Software</a>
+                <a href="../embedded/">Embedded</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
