--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="index.html">jahrei labs</a>
         </div>
         <div class="nav-links">
-            <a href="pages/hardware.html">Hardware</a>
-            <a href="pages/software.html">Software</a>
-            <a href="pages/embedded.html">Embedded</a>
+            <a href="hardware/">Hardware</a>
+            <a href="software/">Software</a>
+            <a href="embedded/">Embedded</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
@@ -32,11 +32,13 @@
     <section class="hero">
         <div class="container">
             <h1 class="fade-in">jahrei labs</h1>
-            <h2 class="fade-in delay-1">Engineering Tomorrow's Solutions</h2>
-            <p class="fade-in delay-2">Bridging hardware and software through innovative design and engineering excellence. From circuit boards to code, I craft solutions that push the boundaries of what's possible.</p>
+            <h2 class="fade-in delay-1">engineering & creative solutions for the modern world</h2>
+            <p class="fade-in delay-2">A personal studio focused on bridging the gap between hardware, software, and creative design.</p>
             <div class="cta-buttons fade-in delay-3">
-                <a href="pages/software.html" class="btn">View Software Projects</a>
-                <a href="pages/hardware.html" class="btn btn-outline">Explore Hardware</a>
+                <a href="hardware/" class="btn">Explore Hardware</a>
+                <a href="software/" class="btn">Explore Software</a>
+                <a href="embedded/" class="btn">Explore Embedded</a>
+                <a href="#projects" class="btn btn-outline">View All Projects</a>
             </div>
         </div>
     </section>
@@ -70,40 +72,41 @@
         </div>
     </section>
 
-    <section class="projects">
+    <section id="projects" class="projects-preview">
         <div class="container">
-            <h2 class="section-title">Project Categories</h2>
+            <h2 class="section-title">Featured Projects</h2>
             <div class="project-categories">
-                <a href="pages/software.html" class="category-card">
-                    <h3>Software</h3>
-                    <p>Web applications, automation tools, and productivity solutions built with modern technologies.</p>
-                    <div class="btn btn-small">Explore Software →</div>
-                </a>
-                <a href="pages/hardware.html" class="category-card">
+                <div class="category-card fade-in">
                     <h3>Hardware</h3>
-                    <p>Custom builds, modifications, and hardware experiments pushing the limits of performance.</p>
-                    <div class="btn btn-small">View Hardware →</div>
-                </a>
-                <a href="pages/embedded.html" class="category-card">
+                    <p>Custom builds, modifications, and hardware experiments exploring the physical side of technology.</p>
+                    <a href="hardware/" class="btn btn-small">View Projects</a>
+                </div>
+                <div class="category-card fade-in delay-1">
+                    <h3>Software</h3>
+                    <p>Productivity tools, automation systems, and web development projects.</p>
+                    <a href="software/" class="btn btn-small">View Projects</a>
+                </div>
+                <div class="category-card fade-in delay-2">
                     <h3>Embedded</h3>
-                    <p>Microcontroller projects, FPGA designs, and IoT solutions bridging hardware and software.</p>
-                    <div class="btn btn-small">See Embedded →</div>
-                </a>
+                    <p>NFC systems, Arduino controllers, FPGA labs, and sensor interfacing projects.</p>
+                    <a href="embedded/" class="btn btn-small">View Projects</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <h2 class="section-title">Contact</h2>
             <div class="contact-content">
-                <p>Interested in collaborating or have a project in mind? I'm always open to discussing new opportunities and challenges.</p>
-                <a href="mailto:contact@jahreilabs.com" class="email-link">contact@jahreilabs.com</a>
+                <p>Interested in collaborating or have questions about my work?</p>
+                <a href="mailto:contact@jahreilabs.com" class="email-link">email</a>
                 <div class="social-links">
-                    <a href="https://github.com/jahrei" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/jgrei" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/jahrei" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    <a href="https://linkedin.com/in/jgrei" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                    <a href="https://instagram.com/jahreilabs" target="_blank" rel="noopener noreferrer">Instagram</a>
                 </div>
-                <p class="coming-soon">Portfolio expansion coming soon...</p>
+                <p class="coming-soon">Blog and newsletter coming soon</p>
             </div>
         </div>
     </section>
