--- a/software/index.html
+++ b/software/index.html
@@ -315,9 +315,9 @@
                 <a href="../index.html">jahrei labs</a>
             </div>
             <div class="nav-links">
-                <a href="hardware.html">Hardware</a>
-                <a href="software.html" class="active">Software</a>
-                <a href="embedded.html">Embedded</a>
+                <a href="../hardware/">Hardware</a>
+                <a href="../software/" class="active">Software</a>
+                <a href="../embedded/">Embedded</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
