Add archive wallpaper section

--- a/hardware/index.html
+++ b/hardware/index.html
@@ -210,6 +210,7 @@
                 <a href="../hardware/" class="active">Hardware</a>
                 <a href="../software/">Software</a>
                 <a href="../embedded/">Embedded</a>
+                <a href="../archive/">Archive</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
