--- a/embedded/index.html
+++ b/embedded/index.html
@@ -211,6 +211,7 @@
                 <a href="../hardware/">Hardware</a>
                 <a href="../software/">Software</a>
                 <a href="../embedded/" class="active">Embedded</a>
+                <a href="../archive/">Archive</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
