--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="hardware/">Hardware</a>
             <a href="software/">Software</a>
             <a href="embedded/">Embedded</a>
+            <a href="archive/">Archive</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
