--- a/software/index.html
+++ b/software/index.html
@@ -318,6 +318,7 @@
                 <a href="../hardware/">Hardware</a>
                 <a href="../software/" class="active">Software</a>
                 <a href="../embedded/">Embedded</a>
+                <a href="../archive/">Archive</a>
                 <a href="#about">About</a>
                 <a href="../index.html#contact">Contact</a>
             </div>
